TWC3119-685: Admin Meet Comp - Product Name Dropdown - Changed styling to add scrolling to prevent overflow issue (#2350)

--- a/Intel.MyDeals/Client/src/app/admin/meetComp/admin.meetComp.component.css
+++ b/Intel.MyDeals/Client/src/app/admin/meetComp/admin.meetComp.component.css
@@ -438,3 +438,8 @@ kendo-popup:has(kendo-grid-columnmenu-filter div.k-columnmenu-item[aria-expanded
   top: unset !important;
 	bottom: 10px !important;
 }
+
+.k-multiselect-wrap.k-floatwrap {
+  overflow-y: scroll;
+  height: 55px !important;
+}
